--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@ng-app-framework/safe",
-    "version": "1.1.9",
+    "version": "1.1.10",
     "license": "MIT",
     "keywords": [
         "ng-app",
@@ -58,6 +58,7 @@
     "$schema": "./node_modules/ng-packagr/package.schema.json",
     "ngPackage": {
         "lib": {
+            "name": "ng-app-safe",
             "entryFile": "index.ts"
         }
     }
